--- a/backboneTestServer/server/public/models1.html
+++ b/backboneTestServer/server/public/models1.html
@@ -17,6 +17,6 @@
         <script src="js/lib/jquery-min.js"></script>
         <script src="js/lib/underscore-min.js"></script>
         <script src="js/lib/backbone-min.js"></script>
-        <script src="js/test1.js"></script>
+        <script src="js/models1.js"></script>
     </body>
 </html>
