Devided vehicles app into modules

--- a/backboneTestServer/server/public/vehiclesApi.html
+++ b/backboneTestServer/server/public/vehiclesApi.html
@@ -41,10 +41,11 @@
     <input type="text" id="name">
     <button id="add-vehicle-btn" class="add-vehicle-btn">Dodaj</button>
 </div>
-<script src="js/lib/jquery-min.js"></script>
-<script src="js/lib/underscore-min.js"></script>
-<script src="js/lib/backbone-min.js"></script>
-<script src="js/lib/fetchPolyfil.js"></script>
-<script src="js/vehiclesApi.js"></script>
+<!--<script src="js/lib/jquery-min.js"></script>-->
+<!--<script src="js/lib/underscore-min.js"></script>-->
+<!--<script src="js/lib/backbone-min.js"></script>-->
+<!--<script src="js/lib/fetchPolyfil.js"></script>-->
+<!--<script src="js/vehiclesApi.js"></script>-->
+<script type="text/javascript" data-main="js/vehiclesApp.js" src="js/lib/require.js"></script>
 </body>
 </html>
