--- a/secondProject/index.html
+++ b/secondProject/index.html
@@ -17,11 +17,18 @@
         <script src="js/lib/jquery-min.js"></script>
         <script src="js/lib/underscore-min.js"></script>
         <script src="js/lib/backbone-min.js"></script>
+        <script src="js/lib/mustache.min.js"></script>
 
         <script src="js/models/todoElement.js" type="text/javascript"></script>
         <script src="js/models/todoList.js" type="text/javascript"></script>
         <script src="js/views/todoElementView.js" type="text/javascript"></script>
         <script src="js/views/todoListView.js" type="text/javascript"></script>
         <script src="js/main.js"></script>
+
+    <script type="text/html" id="todoElementTemplate">
+        <input type="checkbox" {{#isComplete}}checked{{/isComplete}}>
+        {{description}}
+        <button>delete</button>
+    </script>
     </body>
 </html>
